--- a/style3.css
+++ b/style3.css
@@ -58,8 +58,8 @@ button:hover{
 
 img{
     float:right;
-    width:250px;
-    height:400px;
+    width:200px;
+    height:300px;
     background-color: grey;
 }
 
@@ -77,20 +77,20 @@ a:visited{
 
 #changestyle1{
     position: absolute;
-    left: 0px;
+    left: 10px;
     top: 50px;
 }
 
 #changestyle2{
     position: absolute;
-    left: 0px;
-    top: 150px;
+    left: 120px;
+    top: 50px;
 }
 
 #changestyle3{
     position: absolute;
-    left: 0px;
-    top: 250px;
+    left: 230px;
+    top: 50px;
     background-color: darkturquoise;
 }
 
@@ -102,4 +102,14 @@ a:visited{
     font-size: 20px;
 }
 
+#footer{
+    background-color: #28262d;
+    text-align: center;
+    color:white;
+}
 
+#tictactoe{
+    position: absolute;
+    top: 20px;
+    left: 90%;
+}
