--- a/style1.css
+++ b/style1.css
@@ -122,14 +122,16 @@ label{
 
 #tictactoe{
     position: absolute;
-    top: 20px;
-    left: 90%;
+    top: 0px;
+    right:0px;
+    height:108px;
 }
 
 #game{
     position: absolute;
-    top: 40px;
-    left: 90%;
+    top: 108px;
+    right:0px;
+    height:108px;
 }
 
 a:visited{
