--- a/style2.css
+++ b/style2.css
@@ -127,12 +127,14 @@ a:visited{
 
 #tictactoe{
     position: absolute;
-    top: 20px;
-    left: 90%;
+    top: 0px;
+    right:0px;
+    height:144px;
 }
 
 #game{
     position: absolute;
-    top: 100px;
-    left: 90%;
+    top: 144px;
+    right:0px;
+    height:144px;
 }
